Refactor code structure for improved readability and maintainability

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(img/water-surface-seamless-pattern-cartoon-blue-texture_53562-18278.avif);
-   background-size: cover;
+  background: url(img/new-black-charity-water-background.png);
+  background-size: auto 120%;
   display: flex;
   justify-content: center;
   align-items: center;
