--- a/style.css
+++ b/style.css
@@ -121,3 +121,46 @@ body {
   text-decoration: underline;
   font-weight: bold;
 }
+
+#loadingScreenContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(3, 141, 166, 0.8);
+  padding: 32px 30px;
+  border-radius: 16px;
+  box-shadow: 0 4px 24px rgba(0,0,0,0.15);
+  z-index: 1000;
+  color: #ffd700;
+  font-family: 'Tribeca', Arial, sans-serif;
+  text-align: center;
+  font-size: 25px;
+}
+
+#nextLevelBtn {
+  position: absolute;
+  left: 50%;
+  top: calc(50% + 120px);
+  transform: translate(-50%, 0);
+  font-family: 'Tribeca', Arial, sans-serif;
+  font-size: 1.5rem;
+  padding: 20px 36px;
+  border-radius: 8px;
+  border: none;
+  background: rgb(0, 0, 0);
+  color: rgb(255, 201, 7);
+  cursor: pointer;
+  box-shadow: 0 2px 8px rgba(52,152,219,0.15);
+  transition: background 0.2s;
+  letter-spacing: 1px;
+  text-shadow: 1px 1px 0 #1a3c4a;
+  z-index: 1001;
+}
+
+#nextLevelBtn:hover {
+  background: rgb(215, 170, 6);
+}
